--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
+        body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            position: relative;
+            overflow: hidden;
+        }
 
+        .widget-box {
+            width: 100%;
+            min-height: 100px;
+            border: 1px solid #37352f26;
+            border-radius: 5px;
+            padding: 1rem;
+            margin: 0.5rem;
+        }
+
+        p {
+            color: #37352f;
+            font-size: 1rem;
+            font-family: helvetica;
+            vertical-align: middle;
+        }
