--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
-        html {
+        *{
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             position: relative;
             overflow: hidden;
+        }
+
+        body {
+                max-width: 100%;
         }
 
         .widget-box {
