--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
             padding: 0;
             box-sizing: border-box;
             position: relative;
-            max-width: 100%;
+            width: 100vw;
             overflow: hidden;
         }
 
