--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,20 @@
             overflow: hidden;
         }
 
+        .wrapper {
+          margin-right: auto; /* 1 */
+          margin-left:  auto; /* 1 */
+          max-width: 100%; /* 2 */
+          padding-right: 0.5rem; /* 3 */
+          padding-left:  0.5rem; /* 3 */
+        }
+
         .widget-box {
             width: 100%;
             min-height: 100px;
             border: 1px solid #37352f26;
             border-radius: 5px;
             padding: 1rem;
-            margin: 0.5rem;
         }
 
         p {
