--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
           max-width: 100%; /* 2 */
           padding-right: 0.5rem; /* 3 */
           padding-left:  0.5rem; /* 3 */
+        background-color: #f2f2f2;
         }
 
         .widget-box {
